# Gmail_Summary

./: .gitignore  README.md  pyproject.toml  report.md
src/gmailsum/: crew.py  gmail_api.py  gmail_auth.py  main.py
src/gmailsum/config/: agents.yaml  tasks.yaml
src/gmailsum/templates/: dashboard.html
