[project]
name = "gmailsum"
version = "0.1.0"
description = "gmailsum using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
gmailsum = "gmailsum.main:run"
run_crew = "gmailsum.main:run"
train = "gmailsum.main:train"
replay = "gmailsum.main:replay"
test = "gmailsum.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
